# AI-OPS-1

./: .env.example  .gitignore  1.py  IMPLEMENTATION_20JAN.md  LICENSE  POSTGRES_LOG_CLEANING_APPROVAL.md  README.md  charts.json  docker-compose.yml  package-lock.json  start-project.sh  start_all.sh  test_pending_actions.py
R&D/: 02-AWS-ARCHITECTURE.md  11-IMPLEMENTATION-ROADMAP.md
apps/automation/: README.md  requirements.txt
apps/automation/inventory/: hosts.yml
apps/automation/playbooks/: app_error_spike.yml  cdn_failure.yml  clear_cache.yml  db_latency.yml  ddev_health_check.yml  ddev_logs.yml  ddev_restart.yml  ddos_mitigation.yml  health_check.yml  http_5xx_spike.yml  kill_process.yml  netdata_restart.yml  page_load_slow.yml  production_emergency.yml  resource_spike.yml  restart_container.yml  restart_service.yml  site_downtime.yml
apps/automation/rules/: aiops_rulebook.yml
apps/brain/: .env.email.example  Cargo.toml  Dockerfile  cerebro_engine.rs  clear_verification.py  email_notifications.py  incident_manager.py  incident_types.py  inspect_history.py  inspect_thresholds.py  main.py  monitoring_service.py  network_sniffer.py  pipeline_simulator.py  requirements.txt  run_test_cases.py  test_approval_flow.py  test_incident_response.py  update_thresholds.py  verify_alerts.py  verify_sre.py
apps/web/: Dockerfile  package.json
apps/web/src/: server.ts
apps/workflow-engine/: Dockerfile  README.md  approval_service.py  auto_remediation.py  auto_trigger.py  confidence_scorer.py  database.py  event_bus.py  issue_detector.py  main.py  metrics_api.py  models.py  node_registry.py  remediation_executor.py  remediation_workflows.py  requirements.txt  safety_guardrails.py  trigger_system.py  workflow_executor.py  workflow_templates.py  workflow_validation.py
apps/workflow-engine/executors/: __init__.py  api_executor.py  credential_config.py  docker_executor.py  ssh_executor.py
apps/workflow-ui/: package-lock.json  package.json
apps/workflow-ui/src/: App.tsx  index.css
apps/workflow-ui/src/components/: ApprovalPanel.tsx  CommandPalette.css  CommandPalette.tsx  ConnectionStatusBar.css  ConnectionStatusBar.tsx  ErrorBoundary.css  ErrorBoundary.tsx  Header.tsx  Icons.tsx  NodePalette.tsx  PropertyPanel.tsx  SmartNodePalette.css  SmartNodePalette.tsx  ToastNotifications.tsx  WorkflowCanvas.css  WorkflowCanvas.tsx
apps/workflow-ui/src/components/dashboard/: ActiveExecutions.tsx  Dashboard.css  HealthOverview.tsx  LiveIssueFeed.tsx  MetricsGrid.tsx  QuickActions.tsx  index.ts
apps/workflow-ui/src/components/edges/: SmartEdges.css  SmartEdges.tsx
apps/workflow-ui/src/components/nodes/: CustomNodes.tsx
apps/workflow-ui/src/hooks/: index.ts  useApiCall.ts  useIssues.ts  useKeyboardShortcuts.ts  useRealtimeEvents.ts  useWebSocket.ts
apps/workflow-ui/src/pages/: AiChat.css  AiChat.tsx  Alerts.css  Alerts.tsx  Analytics.css  Analytics.tsx  AutonomousOps.css  AutonomousOps.tsx  CommandCenter.css  CommandCenter.tsx  Executors.css  Executors.tsx  Incidents.css  Incidents.tsx  Issues.css  Issues.tsx  Remediation.css  Remediation.tsx  Settings.css  Settings.tsx
apps/workflow-ui/src/services/: analyticsApi.ts  api.ts  executorApi.ts  issueApi.ts  remediationApi.ts  settingsApi.ts
apps/workflow-ui/src/store/: workflowStore.ts
apps/workflow-ui/src/types/: nodeTypes.ts
docs/internal-server/: phase1-server-preparation.md  phase2-nginx-proxy.md  phase3-netdata-metrics.md  phase4-aiops-integration.md  phase5-aiops-playbooks.md  phase6-validation-testing.md
infra/aws/: main.tf  outputs.tf  providers.tf  variables.tf
infra/aws/envs/dev/: terraform.tfvars
infra/aws/envs/prod/: terraform.tfvars
infra/aws/modules/ecr/: main.tf
infra/aws/modules/eks/: main.tf
infra/aws/modules/rds/: main.tf
infra/aws/modules/redis/: main.tf
infra/aws/modules/s3/: main.tf
infra/aws/modules/vpc/: main.tf
infra/k8s/base/: brain-deployment.yaml  brain-service.yaml  configmap.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secrets.yaml  web-deployment.yaml  web-service.yaml
infra/local/: docker-compose.yml  verify_cerebras.py
peekaping/: docker-compose.yml  docker-compose.ymly
