[package]
name = "cerebro-engine"
version = "0.1.0"
edition = "2021"
authors = ["AIOps Team"]
description = "High-performance metrics collection, aggregation, and distribution engine for the Cerebro AIOps platform"
license = "MIT"
readme = "README.md"
keywords = ["aiops", "metrics", "monitoring", "observability", "performance"]
categories = ["development-tools::profiling", "network-programming"]

[lib]
name = "cerebro_engine"
path = "cerebro_engine.rs"

[[bin]]
name = "cerebro"
path = "cerebro_engine.rs"

[features]
default = ["full"]
full = ["network-capture", "docker", "log-processing", "grpc", "websocket"]
network-capture = ["pnet", "etherparse"]
docker = ["bollard"]
log-processing = ["notify", "glob"]
grpc = ["tonic", "prost"]
websocket = ["tokio-tungstenite"]
simd = ["simdeez"]
jemalloc = ["tikv-jemallocator"]

[dependencies]
# ============================================================================
# ASYNC RUNTIME & CONCURRENCY
# ============================================================================
tokio = { version = "1.35", features = ["full", "tracing", "parking_lot"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }

# ============================================================================
# LOCK-FREE DATA STRUCTURES & CONCURRENCY PRIMITIVES  
# ============================================================================
crossbeam = "0.8"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
crossbeam-epoch = "0.9"
dashmap = "5.5"
flume = "0.11"
arc-swap = "1.6"
once_cell = "1.19"
rayon = "1.8"

# ============================================================================
# SERIALIZATION & DATA FORMATS
# ============================================================================
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
toml = "0.8"
rmp-serde = "1.1"  # MessagePack
bincode = "1.3"
bytes = "1.5"

# ============================================================================
# STRING & MEMORY OPTIMIZATION
# ============================================================================
compact_str = { version = "0.7", features = ["serde"] }
smallvec = { version = "1.11", features = ["serde", "union", "const_generics"] }
smartstring = { version = "1.0", features = ["serde"] }
bumpalo = { version = "3.14", features = ["collections"] }
hashbrown = { version = "0.14", features = ["serde", "rayon"] }

# ============================================================================
# HASHING & IDENTITY
# ============================================================================
ahash = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3", "xxh64"] }
fnv = "1.0"
rustc-hash = "1.1"

# ============================================================================
# ERROR HANDLING
# ============================================================================
thiserror = "1.0"
anyhow = "1.0"
color-eyre = "0.6"

# ============================================================================
# LOGGING & TRACING
# ============================================================================
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "parking_lot"] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = "0.14"

# ============================================================================
# TIME & TIMESTAMPS
# ============================================================================
chrono = { version = "0.4", features = ["serde"] }
quanta = "0.12"  # High-performance timestamps
humantime = "2.1"
humantime-serde = "1.1"

# ============================================================================
# NETWORKING & HTTP
# ============================================================================
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "stream"] }
hyper = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }

# ============================================================================
# NETWORK PACKET CAPTURE (optional)
# ============================================================================
pnet = { version = "0.34", optional = true }
etherparse = { version = "0.14", optional = true }

# ============================================================================
# DOCKER INTEGRATION (optional)
# ============================================================================
bollard = { version = "0.15", optional = true }

# ============================================================================
# FILE WATCHING & LOG PROCESSING (optional)
# ============================================================================
notify = { version = "6.1", optional = true }
glob = { version = "0.3", optional = true }

# ============================================================================
# GRPC (optional)
# ============================================================================
tonic = { version = "0.10", optional = true }
prost = { version = "0.12", optional = true }

# ============================================================================
# WEBSOCKET (optional)
# ============================================================================
tokio-tungstenite = { version = "0.21", optional = true }

# ============================================================================
# SIMD ACCELERATION (optional)
# ============================================================================
simdeez = { version = "1.0", optional = true }

# ============================================================================
# MEMORY ALLOCATOR (optional - for production)
# ============================================================================
tikv-jemallocator = { version = "0.5", optional = true }

# ============================================================================
# STATISTICS & MATH
# ============================================================================
num-traits = "0.2"
ordered-float = { version = "4.2", features = ["serde"] }
statistical = "1.0"

# ============================================================================
# COMPRESSION
# ============================================================================
lz4_flex = "0.11"
snap = "1.1"
zstd = "0.13"

# ============================================================================
# REGEX & PATTERN MATCHING
# ============================================================================
regex = "1.10"
aho-corasick = "1.1"
memchr = "2.7"

# ============================================================================
# SYSTEM INFORMATION
# ============================================================================
sysinfo = "0.30"
libc = "0.2"
nix = { version = "0.27", features = ["fs", "process", "signal", "net"] }

# ============================================================================
# UUID & IDENTIFIERS
# ============================================================================
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }
ulid = "1.1"

# ============================================================================
# CONFIGURATION & VALIDATION
# ============================================================================
config = "0.13"
validator = { version = "0.16", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env", "json"] }

# ============================================================================
# CLI
# ============================================================================
clap = { version = "4.4", features = ["derive", "env", "unicode", "wrap_help"] }

# ============================================================================
# PROMETHEUS METRICS EXPORT
# ============================================================================
prometheus = { version = "0.13", features = ["process"] }

# ============================================================================
# UNIX DOMAIN SOCKETS
# ============================================================================
tokio-unix-tcp = "1.0"
interprocess = "1.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
proptest = "1.4"
fake = { version = "2.9", features = ["derive"] }
mockall = "0.12"
tempfile = "3.9"
tokio-test = "0.4"
pretty_assertions = "1.4"
test-case = "3.3"
rstest = "0.18"

[build-dependencies]
prost-build = "0.12"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = "abort"
codegen-units = 1
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[profile.bench]
inherits = "release"
debug = true

[[bench]]
name = "metrics_bench"
harness = false

[[bench]]
name = "collectors_bench"
harness = false

[[bench]]
name = "concurrency_bench"
harness = false
